Modify new recommender from link UI

--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -13,8 +13,9 @@ zh-TW:
         last_name: Last Name(姓氏)
         job_title: Position(職稱)
         department: Department(所屬系所/單位名)
-        institution_id: Institution/Company Name(機構名稱)
+        institution_id: Institution(學校名稱)
         industry_id: Industry(產業類別)
         email: 電子信箱
         provider_name: 提供此名單之教師姓名
         provider_email: 提供此名單提供之教師通訊電郵
+        category: 名單種類
